--- a/[4기]백민기/index.html
+++ b/[4기]백민기/index.html
@@ -11,7 +11,7 @@
       <div class="wrapper">
         <div class="cal">
           <div class="cal-header">
-            <div data-previous-preview class="cal-previous-preview">2</div>
+            <div data-previous-preview class="cal-previous-preview"></div>
             <div data-current-preview class="cal-current-preview"></div>
           </div>
           <div class="cal-body">
@@ -58,5 +58,7 @@
         </div>
       </div>
     </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
